--- a/pages/recursos.qmd
+++ b/pages/recursos.qmd
@@ -10,4 +10,4 @@ title: Recursos para consultar 📌
 
 ## Courses
 
-- [Math for Journalists: Guide to writing about numbers accurately, ethically and elegantly, with a quick review of how to calculate the basics](https://www.poynter.org/shop/self-directed-course/numeracy-primer-how-to-write-about-numbers/)
+- [Math for Journalists: A guide to writing about numbers accurately, ethically and elegantly, with a quick review of how to calculate the basics](https://www.poynter.org/shop/self-directed-course/numeracy-primer-how-to-write-about-numbers/)
